resolved spacing issues, header padding unresolved

--- a/printFunctionality/template.css
+++ b/printFunctionality/template.css
@@ -11,22 +11,21 @@ body{
 #imgheadercontainer{
     height:300px;
     width: 100%;
-    position: absolute;
-    left: 0;
-    top: -1em;
     margin: auto;
-    background-color: rgb(23, 58, 100);
+    background-color: rgb(23, 58, 100); 
 }
 
 #imgheader{
-    width: 1587px;
-    height: 200px;
-    margin: auto;
+    /* width: 1587px;
+    height: 200px; */
+    width: 100%;
+    height: 70%;
     margin-top: 50px;
+    margin-right: auto; margin-left: auto;
 }
 
 #PIA{
-    margin-top: 5em;
+    margin-top: 100px;
     text-align: center;
     font-size: 60px;
     margin-bottom: 20px;
